# hdspin

./: .clang_complete  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  README.md  README.rst  main.cpp  postprocess.cpp  postprocess.py  postprocess_mpi.cpp  pyproject.toml  run.py  setup.py  template_config.yaml
.github/workflows/: .gitignore  build.yaml  build.yml  ci.yaml  ci.yml  correctness.yaml  correctness.yml  test.yaml  tests.yml
configs/grid_configs/: template.yaml
configs/slurm_configs/: template.yaml
docs/: install.md  observables.md  run.md
exe/: eval.py  make_grids.py
hdspin/: gillespie.cpp  gillespie.h  main.cpp  standard.cpp  standard.h
hdspin/utils/: file_utils.cpp  file_utils.h  general_utils.cpp  general_utils.h  grid_utils.cpp  grid_utils.h  init_utils.cpp  init_utils.h  structure_utils.cpp  structure_utils.h
inc/: array.h  array_test.cpp  emax.h  energy_mapping.h  lru.h  main_utils.h  obs1.h  obs2.h  obs_cache_size.h  obs_energy.h  postprocess.h  processing_utils.h  simulation.h  spin.h  structures.h  test.txt  utils.h
inc/CLI11/: LICENSE
inc/Engine/: sim.h
inc/Json/: .gitignore
inc/Obs/: age.h  base.h  configs.h  energy.h  psi.h  ridge.h  rolling.h
inc/Spin/: base.h  gillespie.h  spin.h  standard.h
inc/Utils/: lru.h  structures.h  utils.h
inc/cpp-lru-cache/: lrucache.hpp
inc/old/: old_utils.h
inc/old/Obs/: age.h
legacy/: README.rst
legacy/exe/: eval.py
legacy/inc/Obs/: energy.h
legacy/inc/Utils/: lru.h  structures.h
legacy/main/: hello_world_mpi.cpp
legacy/scripts/: submit.sh
legacy/src/Engine/: sim.cpp
legacy/src/Obs/: age.cpp
legacy/src/Spin/: spin.cpp
lib/: CMakeLists.txt  main.cpp  state_manipulation.cpp  state_manipulation.h
lib/Catch2_v3/: CMakeLists.txt  test_catch2_v3.cpp
lib/app/: CMakeLists.txt  main.cpp
lib/state/: CMakeLists.txt  state.cpp
lib/state_manipulation/: CMakeLists.txt  state_manipulation.cpp  state_manipulation.h
main/: debug.cpp  main.cpp  main2.cpp  test.cpp
notebooks/: generate_report.ipynb
old/: grid_utils.cpp  grid_utils.h
params/: gillespie.yaml  gillespie_EREM.yaml  gillespie_REM.yaml
py/: eval.py  executors.py  mpl_utils.py  parser.py  utils.py
scripts/: _submit.sh  calc.sbatch.sh  construct_inputs.py  eval_1.sbatch.sh  input.template.json  install.sh
slurm_configs/: .gitignore  template.yaml
src/: emax.cpp  energy_mapping.cpp  main.cpp  main_postprocess.cpp  main_utils.cpp  obs1.cpp  obs2.cpp  obs_cache_size.cpp  obs_energy.cpp  postprocess.cpp  processing_utils.cpp  simulation.cpp  spin.cpp  state.cpp  test_state_manipulation.h  test_utils.h  tests.cpp  utils.cpp
src/Engine/: sim.cpp
src/Obs/: age.cpp  base.cpp  base.h  configs.cpp  energy.cpp  psi.cpp  ridge.cpp  rolling.cpp
src/Spin/: base.cpp  gillespie.cpp  spin.cpp  standard.cpp
src/Utils/: structures.cpp  utils.cpp
src/cpp/: simulation_engine.cpp
src/hdspin/: my_module.py
tests/: .coverage  coverage.xml  test_config_auto.json  test_config_gillespie.json  test_config_standard.json  test_energy_mapping.h  test_final.py  test_my_module.py  test_obs1.h  test_simulation_engine.py  test_spin.h  test_utils.h  tests.cpp  utils_testing_suite.h
